2004-09-05  Tom Hughes <tom@compton.nu>

        * Zlib.pm
          Changed version number to 1.04.

2004-08-28  Jarkko Hietaniemi <jhi@iki.fi>

	* t/0signature.t:
	  Add -ing.

	* t/external.t:
	  The skip didn't really skip.

	* t/uncomp1.t, t/uncomp2.t:
	  Make more portable by using binmode().

2004-08-22  Tom Hughes <tom@compton.nu>

	* Zlib.pm
	  Changed version number to 1.03.

2004-08-17  Jarkko Hietaniemi <jhi@iki.fi>
	
	* Zlib.pm
	  Fix the case of trying to read ungzipped data.

	* Zlib.pm
	  Fix the case of not going through import().

2004-08-15  Tom Hughes  <tom@compton.nu>

	* Zlib.pm
	  Change version number to 1.02.

	* META.yml
	  Added a package description file.

	* t/0signature.t
	  Added signature test.

	* MANIFEST
	  Added SIGNATURE to manifest.

2004-04-17  Jarkko Hietaniemi  <jhi@iki.fi>

	* Zlib.pm
	  Added support for external gzip.

	* t/external.t
	  Testing for external gzip.

	* t/import.t
	  Testing for other importing.

	* t/getline.t
	  Test error when getlines called in scalar context.

2001-03-24  Tom Hughes  <tom@compton.nu>

	* Zlib.pm
	  Change version number to 1.01.

	* t/basic.t
	  Added a test for creating a handle without opening it.

	* Zlib.pm
	  Don't try and do an open if we haven't been given any
	  arguments - presumably the user will do one later on.

2001-01-27  Tom Hughes  <tom@compton.nu>

	* Zlib.pm
	  Change version number to 1.00.

	* t/basic.t
	* t/tied.t
	  Added extra tests and improved some existing ones.

	* Zlib.pm
	  Reworked along the lines described in "Object Orientated Perl" to
	  make the tie support work properly.

1998-06-28  Tom Hughes  <tom@compton.nu>

	* Zlib.pm
	  Change version number to 0.02.

	* Zlib.pm
	  Quote all hash dereferences to avoid bareword resolution
	  warnings for eof.