@@ -1,3 +1,11 @@
+2007-03-04  Tom Hughes <tom@compton.nu>
+
+	* t/basic.t
+	  Add test for reading at an offset.
+
+	* Zlib.pm
+	  Allow an offset to be specifed when reading.
+
 2004-09-05  Tom Hughes <tom@compton.nu>
 
         * Zlib.pm
